name: Tutorial
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
data-dir: ""
 
library
    build-depends: base -any
    exposed-modules: Sandbox
    exposed: True
    buildable: True
    hs-source-dirs: src
    other-modules: Problems11_20 IntermediateExecises Problems1_10
 
executable Tutorial
    build-depends: base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Problems11_20 IntermediateExecises Problems1_10
 