name: ProjectEulerSolutions
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Solutions for www.projecteuler.net
data-dir: ""
 
executable ProjectEulerSolutions
    build-depends: QuickCheck -any, base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Problem9 Problem8
 
test-suite test-ProjectEulerSolutions
    build-depends: QuickCheck -any, base -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src